<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="apps">MY NANODEGREE APPS!</string>
    <string name="first_project">SPOTIFY STREAMER</string>
    <string name="second_project">SCORES APP</string>
    <string name="third_project">LIBRARY APP</string>
    <string name="fourth_project">BUILD IT BIGGER</string>
    <string name="fifth_project">XYZ READER</string>
    <string name="final_project">CAPSTONE: MY OWN APP</string>
</resources>
