<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="#000"
        android:textSize="16dp"
        android:text="@string/apps" />


    <Button
        android:id="@+id/first_project"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#F08C35"
        android:layout_margin="8dp"
        android:text="@string/first_project" />

    <Button
        android:id="@+id/second_project"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#F08C35"
        android:layout_margin="8dp"
        android:text="@string/second_project" />

    <Button
        android:id="@+id/third_project"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#F08C35"
        android:layout_margin="8dp"
        android:text="@string/third_project" />

    <Button
        android:id="@+id/fourth_project"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#F08C35"
        android:layout_margin="8dp"
        android:text="@string/fourth_project" />

    <Button
        android:id="@+id/fifth_project"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#F08C35"
        android:text="@string/fifth_project"
        android:layout_margin="8dp"
 />

    <Button
        android:id="@+id/final_project"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#F08C35"
        android:text="@string/final_project"
        android:layout_margin="16dp"
         />


</LinearLayout>
